codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_goal_active_token_budget_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 3575
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
" Elpis · model gpt-5.5 default · location /tmp/project                          "
"────────────────────────────────────────────────┐ CONTEXT LEDGER  context not   "
"› Ask Elpis to do anything                      │ measured · ≈0 source          "
"────────────────────────────────────────────────┤ estimates                     "
" 100% context left | Pursuing goal (40K / 50K)  │ Tab controls · Alt+C hide ·   "
"                                                │ Ctrl+click open file          "
"                                                │                               "
"                                                │ SMART PRUNE       [···] SYNC  "
"                                                │ Reading current thread state  "
"                                                │ Syncing… · /smart-prune on|   "
"                                                │ off sets an explicit state    "
"                                                │                               "
"                                                │ SUBAGENTS          [━━━●] ON  "
"                                                │ May delegate to other agents  "
"                                                │                               "
"                                                │ CONTEXT WINDOW  usage         "
"                                                │ unavailable                   "
"                                                │ Context measurement           "
"                                                │ unavailable until the first   "
"                                                │ request snapshot              "
"                                                │                               "
"                                                │ No portable context is        "
"                                                │ available.                    "
